tests/bad/wrong_inheritance/bad109.lat
class A extends C {
    int a;
}

class B extends A {
    int b;
}

class C extends B {
    int c;
}

int main () {
    return 0;
}